--- a/package.json
+++ b/package.json
@@ -100,7 +100,8 @@
   "scripts": {
     "start": "node server",
     "test": "grunt test",
-    "update-webdriver": "node node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager update"
+    "update-webdriver": "node node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager update",
+    "postinstall" "grunt build"
   },
   "private": true
 }
