--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "express": "^4.13.3",
     "morgan": "~1.6.1",
+    "bower": "^1.7.0",
     "body-parser": "^1.13.3",
     "method-override": "^2.3.5",
     "cookie-parser": "^1.3.5",
@@ -100,7 +101,8 @@
   "scripts": {
     "start": "node server",
     "test": "grunt test",
-    "update-webdriver": "node node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager update"
+    "update-webdriver": "node node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager update",
+    "postinstall": "./node_modules/bower/bin/bower install"
   },
   "private": true
 }
