--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,18 @@
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
     "angular-ui-router": "~0.2.15",
-    "angular-validation-match": "~1.5.2"
+    "angular-validation-match": "~1.5.2",
+    "polymer": "Polymer/polymer#^1.2.0",
+    "paper-header-panel": "PolymerElements/paper-header-panel#~1.1.2",
+    "paper-toolbar": "PolymerElements/paper-toolbar#~1.1.2",
+    "paper-icon-button": "PolymerElements/paper-icon-button#~1.0.5",
+    "paper-card": "PolymerElements/paper-card#~1.0.8",
+    "paper-button": "PolymerElements/paper-button#~1.0.11",
+    "paper-material": "PolymerElements/paper-material#~1.0.4",
+    "iron-icons": "PolymerElements/iron-icons#~1.0.5",
+    "paper-drawer-panel": "PolymerElements/paper-drawer-panel#~1.0.5",
+    "paper-item": "PolymerElements/paper-item#~1.1.2",
+    "paper-menu": "PolymerElements/paper-menu#~1.2.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
