--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,8 @@
     "iron-flex-layout": "PolymerElements/iron-flex-layout#~1.2.2",
     "paper-fab": "PolymerElements/paper-fab#~1.1.1",
     "fabric.js": "fabric#~1.5.0"
+    "google-map": "GoogleWebComponents/google-map#~1.1.7",
+    "point-overlay": "googlecodelabs/polymer-webgl-visualization"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
