--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,8 @@
     "paper-menu": "PolymerElements/paper-menu#~1.2.0",
     "paper-tabs": "PolymerElements/paper-tabs#~1.2.4",
     "iron-flex-layout": "PolymerElements/iron-flex-layout#~1.2.2",
-    "paper-fab": "PolymerElements/paper-fab#~1.1.1"
+    "paper-fab": "PolymerElements/paper-fab#~1.1.1",
+    "fabric.js": "fabric#~1.5.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
