--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,8 @@
     "paper-fab": "PolymerElements/paper-fab#~1.1.1",
     "fabric.js": "fabric#~1.5.0"
     "google-map": "GoogleWebComponents/google-map#~1.1.7",
-    "point-overlay": "googlecodelabs/polymer-webgl-visualization"
+    "point-overlay": "googlecodelabs/polymer-webgl-visualization",
+    "iron-pages": "PolymerElements/iron-pages#~1.0.5"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
