--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,7 @@
     "paper-tabs": "PolymerElements/paper-tabs#~1.2.4",
     "iron-flex-layout": "PolymerElements/iron-flex-layout#~1.2.2",
     "paper-fab": "PolymerElements/paper-fab#~1.1.1",
-    "fabric.js": "fabric#~1.5.0"
+    "fabric.js": "fabric#~1.5.0",
     "google-map": "GoogleWebComponents/google-map#~1.1.7",
     "point-overlay": "googlecodelabs/polymer-webgl-visualization",
     "iron-pages": "PolymerElements/iron-pages#~1.0.5"
