--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,8 @@
     "google-map": "GoogleWebComponents/google-map#~1.1.7",
     "point-overlay": "googlecodelabs/polymer-webgl-visualization",
     "iron-pages": "PolymerElements/iron-pages#~1.0.5",
-    "iron-ajax": "polymerelements/iron-ajax#~1.1.1"
+    "iron-ajax": "polymerelements/iron-ajax#~1.1.1",
+    "paper-tooltip": "PolymerElements/paper-tooltip#~1.1.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
