added popup dialog for class progress

--- a/bower.json
+++ b/bower.json
@@ -32,7 +32,8 @@
     "iron-pages": "PolymerElements/iron-pages#~1.0.5",
     "iron-ajax": "polymerelements/iron-ajax#~1.1.1",
     "paper-tooltip": "PolymerElements/paper-tooltip#~1.1.1",
-    "neon-animation": "PolymerElements/neon-animation#~1.0.8"
+    "neon-animation": "PolymerElements/neon-animation#~1.0.8",
+    "paper-dialog": "PolymerElements/paper-dialog#~1.0.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
