--- a/bower.json
+++ b/bower.json
@@ -34,6 +34,7 @@
     "paper-tooltip": "PolymerElements/paper-tooltip#~1.1.1",
     "neon-animation": "PolymerElements/neon-animation#~1.0.8",
     "paper-dialog": "PolymerElements/paper-dialog#~1.0.3"
+    "paper-input": "PolymerElements/paper-input#~1.1.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
