--- a/bower.json
+++ b/bower.json
@@ -35,6 +35,8 @@
     "neon-animation": "PolymerElements/neon-animation#~1.0.8",
     "paper-dialog": "PolymerElements/paper-dialog#~1.0.3",
     "paper-input": "PolymerElements/paper-input#~1.1.3"
+    "iron-list": "PolymerElements/iron-list#~1.1.6",
+    "paper-scroll-header-panel": "PolymerElements/paper-scroll-header-panel#~1.0.13"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
