--- a/bower.json
+++ b/bower.json
@@ -33,7 +33,7 @@
     "iron-ajax": "polymerelements/iron-ajax#~1.1.1",
     "paper-tooltip": "PolymerElements/paper-tooltip#~1.1.1",
     "neon-animation": "PolymerElements/neon-animation#~1.0.8",
-    "paper-dialog": "PolymerElements/paper-dialog#~1.0.3"
+    "paper-dialog": "PolymerElements/paper-dialog#~1.0.3",
     "paper-input": "PolymerElements/paper-input#~1.1.3"
   },
   "devDependencies": {
