--- a/bower.json
+++ b/bower.json
@@ -34,7 +34,7 @@
     "paper-tooltip": "PolymerElements/paper-tooltip#~1.1.1",
     "neon-animation": "PolymerElements/neon-animation#~1.0.8",
     "paper-dialog": "PolymerElements/paper-dialog#~1.0.3",
-    "paper-input": "PolymerElements/paper-input#~1.1.3"
+    "paper-input": "PolymerElements/paper-input#~1.1.3",
     "iron-list": "PolymerElements/iron-list#~1.1.6",
     "paper-scroll-header-panel": "PolymerElements/paper-scroll-header-panel#~1.0.13"
   },
