--- a/bower.json
+++ b/bower.json
@@ -37,7 +37,9 @@
     "paper-input": "PolymerElements/paper-input#~1.1.3",
     "iron-list": "PolymerElements/iron-list#~1.1.6",
     "paper-scroll-header-panel": "PolymerElements/paper-scroll-header-panel#~1.0.13",
-    "paper-progress": "PolymerElements/paper-progress#~1.0.7"
+    "paper-progress": "PolymerElements/paper-progress#~1.0.7",
+    "paper-radio-group": "PolymerElements/paper-radio-group#~1.0.8",
+    "paper-radio-button": "PolymerElements/paper-radio-button#~1.0.12"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
