--- a/bower.json
+++ b/bower.json
@@ -40,7 +40,8 @@
     "paper-progress": "PolymerElements/paper-progress#~1.0.7",
     "paper-radio-group": "PolymerElements/paper-radio-group#~1.0.8",
     "paper-radio-button": "PolymerElements/paper-radio-button#~1.0.12",
-    "paper-toast": "PolymerElements/paper-toast#~1.1.1"
+    "paper-toast": "PolymerElements/paper-toast#~1.1.1",
+    "paper-checkbox": "PolymerElements/paper-checkbox#~1.1.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
